Made use of the 'addedAs' field for ideas/resources/discussions.  Fixed some alignment issues.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -206,7 +206,8 @@ ul.activity{
 }
 
 .list-item{
-   height:100px;
+   margin-top:10px;
+   border-radius:10px;
 }
 
 .list-item .list-item-text{
@@ -274,6 +275,7 @@ img.config{
 
 img.avatar{
    border-radius: 500px;
+   margin-top:5px;
 }
 .avatar.avatar-large{
     height: 200px;
@@ -287,7 +289,7 @@ img.avatar{
 .avatar{
    height: 70px;
    width:70px;
-   margin-bottom:10px;
+   margin-bottom:5px;
 }
 
 .small-avatar{
